# Runner

./: .env.example  .gitignore  README.md  pyproject.toml  runner
src/runner/: __main__.py  app.py  runner.tcss
src/runner/languages/: __init__.py  base.py
src/runner/languages/go/: __init__.py  runner.py  template.go
src/runner/languages/javascript/: __init__.py  runner.py  template.js
src/runner/languages/kotlin/: __init__.py  runner.py  template.kt
src/runner/languages/python/: __init__.py  runner.py  template.py
